[workspace]
resolver = "2"
members = ["examples/*"]

[package]
name = "spire-api"
version = "0.0.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = [
    "codegen",
    "prost",
] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = [
    "agent-debug",
    "agent-delegatedidentity",
    "server-agent",
    "server-bundle",
    "server-debug",
    "server-entry",
    "server-localauthority",
    "server-svid",
    "server-trustdomain",
]
agent-debug = []
agent-delegatedidentity = []
server-agent = []
server-bundle = []
server-debug = []
server-entry = []
server-localauthority = []
server-svid = []
server-trustdomain = []
