[workspace]
resolver = "2"
members = ["examples/*"]

[workspace.package]
edition = "2024"

[package]
name = "spire-api"
version = "0.0.0"
edition.workspace = true

[dependencies]
prost = "0.13.4"
tonic = { version = "0.13.0", default-features = false, features = [
    "codegen",
    "prost",
] }

[build-dependencies]
tonic-build = "0.13.0"

[features]
default = [
    "agent-debug",
    "agent-delegatedidentity",
    "server-agent",
    "server-bundle",
    "server-debug",
    "server-entry",
    "server-localauthority",
    "server-svid",
    "server-trustdomain",
]
agent-debug = []
agent-delegatedidentity = []
server-agent = []
server-bundle = []
server-debug = []
server-entry = []
server-localauthority = []
server-svid = []
server-trustdomain = []
