[workspace]
resolver = "2"
members = ["examples/*"]

[workspace.package]
edition = "2024"

[package]
name = "spire-api"
version = "0.0.0"
edition.workspace = true

[dependencies]
prost = "0.14.1"
tonic = { version = "0.14.2", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
default = [
    "agent-debug",
    "agent-delegatedidentity",
    "agent-logger",
    "server-agent",
    "server-bundle",
    "server-debug",
    "server-entry",
    "server-localauthority",
    "server-logger",
    "server-svid",
    "server-trustdomain",
]
agent-debug = []
agent-delegatedidentity = []
agent-logger = []
server-agent = []
server-bundle = []
server-debug = []
server-entry = []
server-localauthority = []
server-logger = []
server-svid = []
server-trustdomain = []
