[package]
name = "anonymous-bundle"
version = "0.0.0"
edition = "2021"

[dependencies]
spire-api = { path = "../../", default-features = false, features = [
    "server-bundle",
] }

tokio = { version = "1.42.0", features = ["rt", "net"] }
tonic = { version = "0.12.3", default-features = false, features = ["channel"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = [
    "ring",
] }
tower = { version = "0.5.2", features = ["util"], default-features = false }
chrono = { version = "0.4.38", default-features = false }
hyper-util = { version = "0.1.10", features = ["tokio"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false }
